--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link data-trunk rel="css" type="text/css" href="./public/style.css" />
+        <link data-trunk rel="copy-dir" href="./public/" />
         <title>Dylan Falconer's Website</title>
     </head>
     <body>
